sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:39: error: ')' expected but '}' found.
  }
  ^